[package]
name = "getopts-long"
version = "0.1.1-snapshot"
authors = [ "Alan D. Salewski <ads@salewski.email>" ]
description = "Rust cli options parsing library inspired by Perl's Getopt::Long"
license = "GPL-2.0-or-later OR Apache-2.0"
#homepage = "https://salewski.github.io/getopts-long-rs"
#documentation = FIXME: add URL
repository = "https://github.com/salewski/getops-long-rs"
keywords = [ "getopt", "getopts", "getopt_long", "GNU-style-options", "POSIXLY_CORRECT" ]
categories = [ "command-line-interface" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
